--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 
   <meta property="og:title" content="Alfred">
   <meta property="og:type" content="website">
-  <meta property="og:image" content="https://tsredanovic.github.io/Alfred/img/bot_avatar.png">
-  <meta property="og:url" content="https://tsredanovic.github.io/Alfred/">
+  <meta property="og:image" content="https://tsredanovic.github.io/alfred/img/bot_avatar.png">
+  <meta property="og:url" content="https://tsredanovic.github.io/alfred/">
   <meta property="og:description" content="Alfred Discord Bot">
 
   <title>Alfred</title>
@@ -65,7 +65,7 @@
   </footer>
   <!-- Copyright Section-->
   <div class="copyright py-4 text-center text-white">
-    <div class="container"><small>Copyright © <a href="https://tsredanovic.github.io/Alfred/">Alfred</a> 2021</small></div>
+    <div class="container"><small>Copyright © <a href="https://tsredanovic.github.io/alfred/">Alfred</a> 2021</small></div>
   </div>
 </body>
 
