--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 
   <title>Alfred</title>
 
+  <!-- Favicon -->
+  <link rel="icon" href="img/favicon.ico">
+
   <!-- Styles -->
   <link rel="stylesheet" href="css/styles.min.css">
 </head>
